--- a/.coveragerc
+++ b/.coveragerc
@@ -7,4 +7,7 @@ branch = True
 exclude_lines =
   pragma: no cover
   def __repr__
+  raise NotImplementedError
+  if __name__ == .__main__.:
 show_missing = True
+skip_covered = True
