--- a/.coveragerc
+++ b/.coveragerc
@@ -8,6 +8,6 @@ exclude_lines =
   pragma: no cover
   raise NotImplementedError
   if __name__ == .__main__.:
-  def main():
+  def main\(\):
 show_missing = True
 skip_covered = True
