--- a/circle.yml
+++ b/circle.yml
@@ -3,9 +3,8 @@ machine:
     version: 3.6.0b1
 dependencies:
   override:
-    - pip3 install -r requirements.txt
-    - pip3 install -e .
+    - pip3 install tox
 test:
   override:
-    - pytest
+    - tox
     - bash <(curl -s https://codecov.io/bash)
