--- a/circle.yml
+++ b/circle.yml
@@ -1,10 +1,3 @@
-machine:
-  python:
-    version: 3.6.0b1
-dependencies:
-  override:
-    - pip3 install tox
 test:
-  override:
-    - tox
+  post:
     - bash <(curl -s https://codecov.io/bash)
