--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,7 @@
 [tox]
-envlist = py36
+envlist=py36
+skipsdist=true
 
 [testenv]
 deps=-rrequirements.txt
-commands=pytest
+commands=pytest --junitxml=junit-{envname}.xml
