--- a/tox.ini
+++ b/tox.ini
@@ -4,4 +4,4 @@ skipsdist=true
 
 [testenv]
 deps=-rrequirements.txt
-commands=pytest --junitxml=.junit/{envname}.xml
+commands=pytest --junitxml=.pytest/{envname}.xml
