--- a/circle.yml
+++ b/circle.yml
@@ -2,6 +2,8 @@ machine:
   python:
     version: 3.6.0
 test:
+  override:
+    - tox
   post:
     - mv .pytest $CIRCLE_TEST_REPORTS/pytest
     - bash <(curl -s https://codecov.io/bash)
